# qmk_firmware

./: pyproject.toml  qmk_firmware.sln
keyboards/controllerworks/mini42/keymaps/via-modified/: combos.c  config.h  keymap.c  luna.c  rules.mk
keyboards/controllerworks/mini42/keymaps/via-modified/features/: achordion.c  achordion.h
keyboards/crkbd/keymaps/via-modified/: bongo.h  combos.c  config.h  enums.h  keymap.c  rules.mk  tapdance.c
keyboards/crkbd/keymaps/via-modified/features/: achordion.c
keyboards/keebio/iris/keymaps/via-modified/: config.h  keymap.c  rules.mk
keyboards/splitkb/kyria/keymaps/default-modified/: config.h  encodermap.c  enums.c  enums.h  keymap.c  luna.c  rules.mk
keyboards/splitkb/kyria/keymaps/default-modified/features/: achordion.c  achordion.h
keyboards/splitkb/kyria/keymaps/via-modified/: config.h  keymap.c  rules.mk
keyboards/waterfowl/keymaps/default-modified/: combos.c  config.h  enums.h  keymap.c  oled.c  rules.mk  tapdance.c
keyboards/waterfowl/keymaps/default-modified/features/: achordion.c  achordion.h
