[tool.poetry]
name = "qmk-firmware"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qmk_firmware"}]

[tool.poetry.dependencies]
python = "^3.10"
qmk = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
